# beebtools

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  tests.yml
docs/: README.md  inf-and-nonstandard-discs.md  inf-format.md  library.md  pretty-printer.md  tokenizer.md
docs/commands/: add.md  attrib.md  boot.md  build.md  cat.md  compact.md  create.md  delete.md  disc.md  extract.md  merge.md  mkdir.md  rename.md  search.md  split.md  title.md
src/beebtools/: __init__.py  __main__.py  adfs.py  adfs_resources.py  basic.py  basic_dialects.py  boot.py  cli.py  codec.py  detokenize.py  dfs.py  dfs_resources.py  disc.py  entry.py  image.py  inf.py  inf_translators.py  pretty.py  shared.py  sophie.py  tokenize.py  tokens.py  validation.py  wopr.py  wopr_dialects.py
src/beebtools/commands/: __init__.py  _helpers.py  _registry.py  add.py  attrib.py  boot.py  build.py  cat.py  compact.py  create.py  delete.py  disc.py  extract.py  merge.py  mkdir.py  rename.py  search.py  split.py  title.py
tests/: __init__.py  conftest.py  test_adfs.py  test_basic.py  test_boot.py  test_cli_commands.py  test_cli_coverage.py  test_cli_extract.py  test_cli_registry.py  test_codec.py  test_detokenize.py  test_dfs.py  test_disc.py  test_dunders.py  test_inf.py  test_inf_translators.py  test_pretty.py  test_search.py  test_sophie_basic_iv.py  test_sophie_parity.py  test_split_merge.py  test_tokenize.py  test_validation.py  test_wopr_basic_iv.py  test_wopr_parity.py
tests/scripts/: create_test_images.py
