[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beebtools"
version = "0.8.0"
description = "BBC Micro disc image tool - DFS and ADFS catalogue, extract, create, and build with BBC BASIC detokenizer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "acscpt"}
]
keywords = ["bbc-micro", "acorn", "dfs", "adfs", "disc", "basic", "bbc-basic", "detokenize", "retro", "8bit", "ssd", "dsd", "adf", "adl", "create", "build"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: System :: Archiving",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
beebtools = "beebtools:main"

[project.urls]
Repository = "https://github.com/acscpt/beebtools"
Documentation = "https://github.com/acscpt/beebtools/tree/main/docs"
Issues = "https://github.com/acscpt/beebtools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Match camelCase test functions (testFoo) as well as the classic test_foo style.
python_functions = "test*"

[tool.coverage.run]
source = ["beebtools"]

[tool.coverage.report]
show_missing = true
skip_empty = true
